--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,23 @@
 @import url(../vendor/normalize.css);
 
 @import url(../vendor/fonts/font.css);
+
+@import url(../blocks/page/page.css);
+@import url(../blocks/page/__content/page__content.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/header__line/header__line.css);
+@import url(../blocks/logo/logo.css);
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__data/profile__data.css);
+@import url(../blocks/avatar/avatar.css);
+@import url(../blocks/avatar/__img/avatar__img.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__data/profile__data.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__description/profile__description.css);
+@import url(../blocks/edit-button/edit-button.css);
+@import url(../blocks/profile/__main/profile__main.css);
+@import url(../blocks/add-button/add-button.css);
+@import url(../blocks/button/button.css);
