--- a/pages/index.css
+++ b/pages/index.css
@@ -21,3 +21,12 @@
 @import url(../blocks/profile/__main/profile__main.css);
 @import url(../blocks/add-button/add-button.css);
 @import url(../blocks/button/button.css);
+
+@import url(../blocks/photos/photos.css);
+@import url(../blocks/photo-card/photo-card.css);
+@import url(../blocks/photo-card/__like/photo-card__like.css);
+@import url(../blocks/photo-card/__img/photo-card__img.css);
+@import url(../blocks/photo-card/__name/photo-card__name.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/copyright/copyright.css);
