--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -6,3 +6,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media screen and (max-width:320px) {
+  .profile{
+    flex-direction: column;
+    margin-top: 42px;
+    height: 286px;
+  }
+}
