--- a/blocks/edit-button/edit-button.css
+++ b/blocks/edit-button/edit-button.css
@@ -5,4 +5,14 @@
   background-image: url(../../images/Edit-button.svg);
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: 10px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width:320px) {
+  .edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: 7.5px;
+  }
 }
