--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,11 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+@media screen and (max-width:320px) {
+  .header {
+    height: 56px;
+    width: 100vw;
+    margin: 28px -19px 0;
+  }
+}
