--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -6,3 +6,10 @@
   width: 142px;
   height: 33px;
 }
+
+@media screen and (max-width:320px) {
+  .logo {
+    width: 103.74px;
+    height: 24.4px;
+  }
+}
