--- a/blocks/page/__content/page__content.css
+++ b/blocks/page/__content/page__content.css
@@ -1,5 +1,7 @@
 .page__content {
   min-width: 320px;
-  max-width: 880px;
+  max-width: 918px;
   margin: 0 auto;
+  padding: 0 19px;
+  box-sizing: border-box;
 }
