--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -2,3 +2,10 @@
   display: flex;
   justify-content: start;
 }
+
+@media screen and (max-width:320px) {
+  .profile__data{
+    flex-direction: column;
+    align-items: center;
+  }
+}
