--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,9 @@
 .profile__info {
   margin: 22px 0 25px 30px;
 }
+
+@media screen and (max-width:320px) {
+  .profile__info {
+    margin: 26px 0 36px;
+  }
+}
