Адаптивность на промежуточных экранах

--- a/blocks/photo-card/photo-card.css
+++ b/blocks/photo-card/photo-card.css
@@ -2,4 +2,25 @@
   background-color: #FFFFFF;
   border-radius: 10px;
   position: relative;
+  width: 282px;
+  height: 361px;
+  margin: 0 17px 20px 0;
+}
+
+@media screen and (min-width:918px) {
+.photo-card:nth-child(3n) {
+  margin-right: 0;
+}
+}
+
+@media screen and (max-width:917px) and (min-width:619px) {
+  .photo-card:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width:618px) {
+  .photo-card {
+    margin-right: 0;
+  }
 }
