--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -14,3 +14,9 @@
     background-size: 16px;
   }
 }
+
+.add-button:hover {
+  transition: opacity ease-out 1s;
+  opacity: .6;
+  cursor: pointer;
+}
