--- a/blocks/edit-button/edit-button.css
+++ b/blocks/edit-button/edit-button.css
@@ -16,3 +16,9 @@
     background-size: 7.5px;
   }
 }
+
+.edit-button:hover {
+  transition: opacity ease-out 1s;
+  opacity: .6;
+  cursor: pointer;
+}
