--- a/blocks/photo-card/__like/photo-card__like.css
+++ b/blocks/photo-card/__like/photo-card__like.css
@@ -6,3 +6,9 @@
   right: 30px;
   bottom: 30px;
 }
+
+.photo-card__like:hover {
+  transition: opacity ease-out 1s;
+  opacity: .5;
+  cursor: pointer;
+}
