--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -3,3 +3,9 @@
   padding: 0;
   border-color: #FFFFFF;
 }
+
+.button:hover {
+  transition: opacity ease-out 1s;
+  opacity: .6;
+  cursor: pointer;
+}
