--- a/blocks/photo-card/__name/photo-card__name.css
+++ b/blocks/photo-card/__name/photo-card__name.css
@@ -1,7 +1,11 @@
 .photo-card__name {
-font-weight: 900;
-font-size: 24px;
-line-height: 29.05px;
-color: #000000;
-margin: 21px 25px 15px 31px;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29.05px;
+  color: #000000;
+  margin: 21px 25px 15px 31px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 190px;
 }
