--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,13 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/copyright/copyright.css);
+
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/edit-profile/edit-profile.css);
+@import url(../blocks/edit-profile/__title/edit-profile__title.css);
+@import url(../blocks/edit-profile/__input/edit-profile__input.css);
+@import url(../blocks/edit-profile/__save/edit-profile__save.css);
+@import url(../blocks/edit-profile/__close/edit-profile__close.css);
