Исправления по ревью

--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -7,6 +7,12 @@
   height: 33px;
 }
 
+@media screen and (max-width: 879px) {
+  .logo {
+    margin-left: 27px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .logo {
     width: 103.74px;
