--- a/blocks/edit-profile/__close/edit-profile__close.css
+++ b/blocks/edit-profile/__close/edit-profile__close.css
@@ -7,8 +7,9 @@
   height: 32px;
   position: absolute;
   right: -40px;
-  top: -70px;
+  top: -40px;
   border: 0;
+  background-color: unset;
 }
 
 @media screen and (max-width: 460px) {
@@ -17,5 +18,6 @@
     width: 20px;
     height: 20px;
     right: 0px;
+    top: -36px;
   }
 }
