--- a/blocks/edit-profile/__input/edit-profile__input.css
+++ b/blocks/edit-profile/__input/edit-profile__input.css
@@ -1,7 +1,7 @@
 .edit-profile__input {
   border: 0;
   outline: none;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.21;
