--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,11 @@
   width: 100%;
   margin: 0;
   margin-bottom: 60px;
+  min-width: 320px;
+  max-width: 918px;
+  margin: 0 auto;
+  padding: 0 19px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width:320px) {
