--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,16 +1,20 @@
 .header {
   width: 100%;
-  height: 74px;
-  margin: 45px 0 0;
+  min-height: 74px;
+  margin: 45px auto 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border-bottom: solid 1px #545454;
+  min-width: 320px;
+  max-width: 880px;
 }
 
 @media screen and (max-width:320px) {
   .header {
     height: 56px;
     width: 100vw;
-    margin: 28px -19px 0;
+    margin: 28px 0 0;
+    box-sizing: border-box;
   }
 }
