--- a/blocks/photo-card/__info/photo-card__info.css
+++ b/blocks/photo-card/__info/photo-card__info.css
@@ -1,6 +1,6 @@
-.profile__main {
+.photo-card__info {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 100%;
+  margin: 30px 0;
 }
