--- a/blocks/photo-card/__name/photo-card__name.css
+++ b/blocks/photo-card/__name/photo-card__name.css
@@ -3,9 +3,9 @@
   font-size: 24px;
   line-height: 29.05px;
   color: #000000;
-  margin: 21px 25px 15px 31px;
+  margin: 0 0 0 31px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width: 190px;
+  max-width: 165px;
 }
