--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,21 +1,16 @@
 .popup__container {
-  position: fixed;
-  left: calc((100% - 430px) / 2);
-  right: auto;
-  top: calc((100vh - 330px - 40px)/2);
-  bottom: auto;
   background-color: #FFFFFF;
   box-shadow: 0px 0px 25px 0px #00000026;
   width: 430px;
-  height: 330px;
+  min-height: 330px;
   border-radius: 10px;
+  margin: auto;
+  position: relative;
 }
 
 @media screen and (max-width: 460px) {
   .popup__container {
     width: 282px;
-    height: 322px;
-    left: calc((100% - 282px) / 2);
-    top: calc((100vh - 322px)/2);
+    min-height: 322px;
   }
 }
