--- a/blocks/profile/__add/profile__add.css
+++ b/blocks/profile/__add/profile__add.css
@@ -1,16 +1,18 @@
-.add-button {
+.profile__add {
   width: 150px;
   height: 50px;
-  border: 2px solid;
-  background-image: url(../../images/Add-button.svg);
+  border: 2px solid #FFFFFF;
+  background-image: url(../../../images/Add-button.svg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 22px;
+  margin: 0 0 0 10px;
 }
 
 @media screen and (max-width:320px) {
-  .add-button {
+  .profile__add {
     width: 100%;
     background-size: 16px;
+    margin: 0;
   }
 }
