--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -1,11 +1,14 @@
 .profile__data {
   display: flex;
   justify-content: start;
+  align-items: center;
+  max-width: calc(100% - 160px);
 }
 
 @media screen and (max-width:600px) {
   .profile__data{
     flex-direction: column;
     align-items: center;
+    max-width: 100%;
   }
 }
