--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,18 +1,20 @@
-.edit-button {
+.profile__edit {
   width: 24px;
   height: 24px;
-  border: 1px solid;
-  background-image: url(../../images/Edit-button.svg);
+  border: 1px solid #FFFFFF;
+  background-image: url(../../../images/Edit-button.svg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 10px;
   box-sizing: border-box;
+  min-width: 24px;
 }
 
 @media screen and (max-width:320px) {
-  .edit-button {
+  .profile__edit {
     width: 18px;
     height: 18px;
     background-size: 7.5px;
+    min-width: 18px;
   }
 }
