--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,11 @@
 .profile__info {
-  margin: 22px 0 25px 30px;
+  margin: 0 0 0 30px;
+  max-width: calc(100% - 120px - 30px);
 }
 
 @media screen and (max-width:600px) {
   .profile__info {
     margin: 26px 0 36px;
+    max-width: 100%;
   }
 }
