--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,15 +1,20 @@
 .profile__name {
   font-weight: 500;
-  font-size: 27px;
-  line-height: 32.68px;
+  font-size: 42px;
+  line-height: 48px;
   text-align: center;
   vertical-align: bottom;
   margin: 0;
   margin-right: 18px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width:600px) {
   .profile__name{
     margin-right: 10px;
+    font-size: 27px;
+    line-height: 32.68px;
   }
 }
