Исправления по ревью 2

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width:320px) {
   .header {
-    height: 56px;
+    min-height: 56px;
     width: 100vw;
     margin: 28px 0 0;
     box-sizing: border-box;
