--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.edit-profile__close {
+.popup__close {
   background-image: url(../../../images/Close-Icon.svg);
   background-size: 32px;
   background-repeat: no-repeat;
@@ -13,7 +13,7 @@
 }
 
 @media screen and (max-width: 550px) {
-  .edit-profile__close {
+  .popup__close {
     background-size: 20px;
     width: 20px;
     height: 20px;
