--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -6,5 +6,8 @@
   bottom: 0;
   background-color: rgba(0,0,0,.5);
   overflow: hidden;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility .5s, opacity .5s linear;
 }
