--- a/blocks/button/_save/button_save.css
+++ b/blocks/button/_save/button_save.css
@@ -1,4 +1,4 @@
-.edit-profile__save {
+.button_save {
   background-color: #000;
   color: #fff;
   font-weight: 400;
@@ -14,13 +14,13 @@
 }
 
 @media screen and (max-width: 550px) {
-  .edit-profile__save {
+  .button_save {
     margin: 45px auto 25px;
     font-size: 14px;
     width: 238px;
   }
 }
 
-.edit-profile__save:hover {
+.button_save:hover {
   opacity: .8;
 }
