--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.edit-profile__title {
+.popup__title {
   margin: 34px 36px 54px;
   font-weight: 900;
   font-size: 24px;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 550px) {
-  .edit-profile__title {
+  .popup__title {
     font-size: 18px;
     line-height: 21.78px;
     margin: 25px 22px 75px;
