Исправления по ревью

--- a/src/blocks/profile/__data/profile__data.css
+++ b/src/blocks/profile/__data/profile__data.css
@@ -1,6 +1,6 @@
 .profile__data {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   max-width: calc(100% - 160px);
 }
