--- a/src/blocks/avatar/avatar.css
+++ b/src/blocks/avatar/avatar.css
@@ -1,7 +1,5 @@
 .avatar {
   width: 120px;
   height: 120px;
-  border-radius: 50%;
-  background-color: #C4C4C4;
-  object-fit: cover;
+  position: relative;
 }
