--- a/src/blocks/photo-card/__like/photo-card__like.css
+++ b/src/blocks/photo-card/__like/photo-card__like.css
@@ -2,7 +2,7 @@
   background-image: url(../../../images/like.svg);
   width: 22px;
   height: 19px;
-  margin: 0 30px;
+  margin: 0;
   border: 0;
   background-color: unset;
   cursor: pointer;
